CATL-955: Fix Styling Issues when Case is Selected
Padlock div was covering the whole column where cases are shown, breaking the
links to access unlocked cases.

Fixed by setting position for <td>'s with the case info relative.

--- a/css/caseList.css
+++ b/css/caseList.css
@@ -387,10 +387,9 @@
   max-width: 370px;
   min-width: 370px;
 }
-#bootstrap-theme .viewing-case .scrolling table.case-list-table thead.affix {
+#bootstrap-theme .viewing-case .scrolling table.case-list-table td.fixed-col {
   position: relative;
 }
-
 div.lockDiv {
   width: 100%;
   height: 100%;
